<resources>
    <string name="app_name">Awesome Worktime Tracker 2000 Mobile</string>
    <string name="login_label">Ole hyvä, ja kirjaudu sisään.</string>
    <string name="user_name">Käyttäjätunnus</string>
    <string name="password">Salasana</string>
    <string name="button_login_label">Kirjaudu</string>
    <string name="toast_login_invalid_credentials">Sähköpostiosoite ja/tai salasana eivät täsmää. Tarkista syöttämäsi tiedot.</string>
    <string name="toast_login_something_went_wrong">Hups, jotain meni nyt pieleen. Ole hyvä, tarkista laitteen internetyhteys ja yritä uudestaan.</string>
    <string name="monday">Maanantai</string>
    <string name="tuesday">Tiistai</string>
    <string name="wednesday">Keskiviikko</string>
    <string name="thursday">Torstai</string>
    <string name="friday">Perjantai</string>
    <string name="saturday">Lauantai</string>
    <string name="sunday">Sunnuntai</string>
    <string name="week">Viikko %1$s</string>
    <string name="dates_between">Päivämäärä</string>
    <string name="date">Päivämäärä</string>
    <string name="project">Projekti</string>
    <string name="save">Tallenna</string>
    <string name="delete">Poista</string>
    <string name="worktime_entry_list_item_project">%1$s</string>
    <string name="worktime_entry_list_item_project_no_project">Muu työ</string>
    <string name="worktime_entry_list_item_start_and_end_times">%1$s - %2$s</string>
    <string name="btnWeekView">Kalenteri</string>
    <string name="btnMessage">Viestit</string>
    <string name="btnContacts">Yhteyshenkilöt</string>
    <string name="btnProjects">Projektit</string>
    <string name="btnStatistics">Omat merkinnät</string>
    <string name="btnSettings">Asetukset</string>
    <string name="feature_not_implemented">Ominaisuus ei vielä implementoitu.</string>
    <string name="succesfulDelete">Merkintä poistettu onnistuneesti.</string>
    <string name="succesfulSave">Merkintä tallennettu onnistuneesti.</string>
    <string name="checkSelectedDates">Tarkista annetut päivämäärät!</string>
</resources>